--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -40,6 +40,16 @@
     "Profiling (EDA con una linea de codigo):\n",
     "  - [sweetviz](https://github.com/fbdesignpro/sweetviz)\n",
     "  - [ydata](https://github.com/ydataai/ydata-profiling) \n",
+    "  - Otros que puedes investigar:\n",
+    "    - [AutoViz](https://github.com/AutoViML/AutoViz)\n",
+    "    - [DataPrep](https://dataprep.ai/)\n",
+    "    - [D-Tale](https://github.com/man-group/dtale)\n",
+    "    - [dabl](https://amueller.github.io/dabl/dev/quick_start.html)\n",
+    "    - [QuickDA](https://github.com/sid-the-coder/QuickDA)\n",
+    "    - [Datatile](https://github.com/polyaxon/traceml)\n",
+    "    - [Lux](https://github.com/lux-org/lux)\n",
+    "    - [ExploriPy](https://github.com/exploripy/exploripy)\n",
+    "\n",
     "  \n",
     "Tests de distribuciones de probabilidad:\n",
     "  - [Fitter](https://github.com/cokelaer/fitter)"
@@ -80,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
