--- a/cursos/espanol/programacion_basico/4_mis_instrucciones.ipynb
+++ b/cursos/espanol/programacion_basico/4_mis_instrucciones.ipynb
@@ -374,6 +374,8 @@
    "outputs": [],
    "source": [
     "# Con la siguiente linea de codigo probaremos nuestra funcion\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
     "dibujar_rectangulo(100, 200)"
    ]
   },
@@ -429,6 +431,8 @@
    "outputs": [],
    "source": [
     "# Con la siguiente linea de codigo probaremos nuestra funcion\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
     "dibujar_triangulo(\"yellow\", 150)"
    ]
   },
@@ -442,11 +446,11 @@
     "\n",
     "def dibujar_triangulo(color_elegido, largo_del_lado):<br>\n",
     "&nbsp;&nbsp;color(color_elegido)<br>\n",
-    "&nbsp;&nbsp;derecha(60)<br>\n",
+    "&nbsp;&nbsp;derecha(120)<br>\n",
     "&nbsp;&nbsp;adelante(largo_del_lado)<br>\n",
-    "&nbsp;&nbsp;derecha(60)<br>\n",
+    "&nbsp;&nbsp;derecha(120)<br>\n",
     "&nbsp;&nbsp;adelante(largo_del_lado)<br>\n",
-    "&nbsp;&nbsp;derecha(60)<br>\n",
+    "&nbsp;&nbsp;derecha(120)<br>\n",
     "&nbsp;&nbsp;adelante(largo_del_lado)<br>\n",
     "\n",
     "</code>\n",
