--- a/cursos/espanol/programacion_basico/6_mas_patrones.ipynb
+++ b/cursos/espanol/programacion_basico/6_mas_patrones.ipynb
@@ -131,75 +131,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crear nuestras propias instrucciones\n",
-    "\n",
-    "Si ponemos el codigo anterior dentro de una definicion (`def`) entonces podemos crear nuestra propia instruccion. Veamos como crear nuestra propia instruccion para crear hexagonos:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hexagono():\n",
-    "    angulo_externo = 60\n",
-    "    largo_lados = angulo_externo\n",
-    "    xy_inicial = (xcor(), ycor())\n",
-    "\n",
-    "    adelante(largo_lados)\n",
-    "    derecha(angulo_externo)\n",
-    "    while xy_inicial != (xcor(),ycor()):\n",
-    "        adelante(largo_lados)\n",
-    "        derecha(angulo_externo)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Luego de ejecutar el codigo anterior ahora podemos usar nuestra nueva instruccion:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "velocidad(13)\n",
-    "\n",
-    "hexagono()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Combinemosla con un `for` para crear varios hexagonos seguidos:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ir_a_casa()\n",
-    "borrar_todo()\n",
-    "velocidad(13)\n",
-    "\n",
-    "for x in range(5):\n",
-    "    hexagono()\n",
-    "    adelante(30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Ejercicio 2: \n",
     "\n",
     "Usar el patron de los poligonos para generar un circulo"
@@ -236,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vimos en la unidad anterior que podemos utilizar `dibujar()` y `no_dibujar()` para dibujar una linea punteada:"
+    "Vimos en una unidad anterior que podemos utilizar `dibujar()` y `no_dibujar()` para dibujar una linea punteada:"
    ]
   },
   {
