--- a/cursos/espanol/datascience/4_caja_negra.ipynb
+++ b/cursos/espanol/datascience/4_caja_negra.ipynb
@@ -135,7 +135,7 @@
    "id": "3d98cf92-5f06-458f-903b-4cc933e78afc",
    "metadata": {},
    "source": [
-    "Y ahora ya podemos utilizar nuestra caja negra para hacer predicciones. Veamos que valor nos da para nuestro telefono:"
+    "Y ahora ya podemos utilizar nuestra caja negra para hacer predicciones. Veamos que valor nos da para nuestro telefono que recordemos es un iphone 11 pro, gris, tiene 256GB de memoria, bateria 81%, esta desbloqueado y el estado es bueno. Por lo tanto transformamos estos valores de igual forma que lo hicimos con el resto de valores de nuestra tabla de datos:"
    ]
   },
   {
@@ -154,8 +154,8 @@
     "    'Color_Oro': [0],\n",
     "    'Color_Verde': [0],\n",
     "    'Estado_Bueno': [1],\n",
-    "    'Estado_Muy bueno': [1],\n",
-    "    'Estado_Reacondicionado': [1],\n",
+    "    'Estado_Muy bueno': [0],\n",
+    "    'Estado_Reacondicionado': [0],\n",
     "             })"
    ]
   },
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
