--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -32,8 +32,8 @@
     "  \n",
     "  \n",
     "Limpieza y manipulacion de datos con \n",
-    "  - [Pandas](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb)\n",
-    "  - [Numpy](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb)\n",
+    "  - [Pandas](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.2_jugando_con_pandas.ipynb)\n",
+    "  - [Numpy](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.1_jugando_con_numpy.ipynb)\n",
     "  - [Cleanlab](https://docs.cleanlab.ai/stable/index.html)\n",
     "  \n",
     "  \n",
