--- a/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb
+++ b/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb
@@ -518,7 +518,11 @@
    "id": "91af2a9a-dfea-4021-a4db-13aa4f0f5108",
    "metadata": {},
    "source": [
-    "### Realizar las mismas transformaciones en la tabla de test"
+    "### Realizar las mismas transformaciones en la tabla de test\n",
+    "\n",
+    "Cargar los archivos de test desde encuentran en las siguientes urls:\n",
+    "- https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_analisis.csv\n",
+    "- https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_info.csv"
    ]
   },
   {
@@ -875,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
