--- a/cursos/espanol/datascience/0__cheatsheet.ipynb
+++ b/cursos/espanol/datascience/0__cheatsheet.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "026d14d2-8914-4858-ae7f-9e52350cff38",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e7ae4ffb-f8f7-4039-8e6f-0e93d81852e0",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f72bbc4e-f3bb-4133-aedf-91ab9c153790",
    "metadata": {},
    "outputs": [
@@ -166,46 +166,46 @@
        "      <th>0</th>\n",
        "      <td>id</td>\n",
        "      <td>int64</td>\n",
-       "      <td>[ 9051,  7777, 64238, 48207, 49535]</td>\n",
+       "      <td>[82316, 48864, 12365, 60201, 34239]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>edad</td>\n",
        "      <td>int64</td>\n",
-       "      <td>[16045,    56, 18196, 14584, 21218]</td>\n",
+       "      <td>[21955, 17418, 21975,    40, 21855]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>altura</td>\n",
        "      <td>int64</td>\n",
-       "      <td>[145, 165, 163, 156, 169]</td>\n",
+       "      <td>[160, 160, 160, 185, 174]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>peso</td>\n",
        "      <td>float64</td>\n",
-       "      <td>[82., 92., 85., 57., nan]</td>\n",
+       "      <td>[81., 90., 76., 93., 88.]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>sexo</td>\n",
        "      <td>object</td>\n",
-       "      <td>['f', 'm', 'masculino', 'm', 'masculino']</td>\n",
+       "      <td>['masculino', 'm', 'f', 'm', 'femenino']</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Names    Types                                     Values\n",
-       "0      id    int64        [ 9051,  7777, 64238, 48207, 49535]\n",
-       "1    edad    int64        [16045,    56, 18196, 14584, 21218]\n",
-       "2  altura    int64                  [145, 165, 163, 156, 169]\n",
-       "3    peso  float64                  [82., 92., 85., 57., nan]\n",
-       "4    sexo   object  ['f', 'm', 'masculino', 'm', 'masculino']"
+       "    Names    Types                                    Values\n",
+       "0      id    int64       [82316, 48864, 12365, 60201, 34239]\n",
+       "1    edad    int64       [21955, 17418, 21975,    40, 21855]\n",
+       "2  altura    int64                 [160, 160, 160, 185, 174]\n",
+       "3    peso  float64                 [81., 90., 76., 93., 88.]\n",
+       "4    sexo   object  ['masculino', 'm', 'f', 'm', 'femenino']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
