--- a/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "[Implement a transformer from scratch with keras](https://keras.io/guides/keras_nlp/transformer_pretraining/)\n",
     "\n",
-    "[Deep NN course](https://fleuret.org/dlc/)"
+    "[Deep NN course](https://fleuret.org/dlc/)\n",
+    "\n",
+    "[Step by step without math](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)"
    ]
   },
   {
@@ -43,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
