--- a/cursos/espanol/datascience/A2.4_pandas_dq.ipynb
+++ b/cursos/espanol/datascience/A2.4_pandas_dq.ipynb
@@ -96,7 +96,7 @@
     "from pandas_dq import Fix_DQ\n",
     "\n",
     "fdq = Fix_DQ()\n",
-    "X_train_transformed = fdq.fit_transform(X_train)\n"
+    "df_train_transformed = fdq.fit_transform(df_train)\n"
    ]
   },
   {
