--- a/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
@@ -744,6 +744,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cc96559e-4894-4ec5-8744-5ebe5b7e3fc0",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 11B:\n",
+    "\n",
+    "Mostrar cuantos sobrevivientes **hombres** hubo por clase. Usar pandas para filtrar las filas que correspondan a pasajeros hombres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b0f4a79-1e4d-4e91-b03c-d92b96e99463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d7b0215-cd05-47f3-a266-29924069504d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 11B {display-mode:\"form\"}\n",
+    "\n",
+    "sns.catplot(data=titanic[titanic[\"sex\"] == \"male\"], x=\"class\", hue=\"survived\", kind=\"count\");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "db0e49e6-06f7-451b-a6ec-78a8754fa626",
    "metadata": {},
    "source": [
@@ -841,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
