--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -29,6 +29,11 @@
     "Graficos:\n",
     "  - [Seaborn](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb)\n",
     "  - [Matplotlib](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb)\n",
+    "  - Otras que puedes investigar:\n",
+    "    - [Plotly](https://plotly.com/python/)\n",
+    "    - [Bokeh](https://bokeh.org/)\n",
+    "    - [Altair](https://altair-viz.github.io/)\n",
+    "    - [ggplot](https://ggplot2.tidyverse.org/)\n",
     "  \n",
     "  \n",
     "Limpieza y manipulacion de datos con \n",
