--- a/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
@@ -772,7 +772,8 @@
    "source": [
     "#@title Solucion Ejercicio 11B {display-mode:\"form\"}\n",
     "\n",
-    "sns.catplot(data=titanic[titanic[\"sex\"] == \"male\"], x=\"class\", hue=\"survived\", kind=\"count\");\n"
+    "df_filtrado = titanic[titanic[\"sex\"] == \"male\"]\n",
+    "sns.catplot(data=df_filtrado, x=\"class\", hue=\"survived\", kind=\"count\");\n"
    ]
   },
   {
