--- a/cursos/espanol/datascience/0__utils.ipynb
+++ b/cursos/espanol/datascience/0__utils.ipynb
@@ -5,69 +5,7 @@
    "id": "4701b36c-873d-4076-a078-fb5c3f4d1bad",
    "metadata": {},
    "source": [
-    "# Cheat Sheet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e4ddd1a",
-   "metadata": {},
-   "source": [
-    "# Crear enviroments de anaconda desde un environment.yml file\n",
-    "\n",
-    "- https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/04-sharing-environments/index.html\n",
-    "\n",
-    "\n",
-    "Ejemplo del contenido del archivo de configuracion environment.yml:\n",
-    "```\n",
-    "name: ejemploenv\n",
-    "\n",
-    "dependencies:\n",
-    " - jupyterlab=1.0\n",
-    " - matplotlib=3.1\n",
-    " - pandas=0.24\n",
-    " - scikit-learn=0.21\n",
-    " - pip=19.1\n",
-    " - pip:\n",
-    "   - kaggle==1.5\n",
-    "   - yellowbrick==0.9\n",
-    "```\n",
-    "\n",
-    "To create the environment:\n",
-    "```\n",
-    "conda env create --file environment.yml\n",
-    "```\n",
-    "\n",
-    "To create the environment in you proyect folder:\n",
-    "```\n",
-    "conda env create --file environment.yml --prefix ./env\n",
-    "```\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40293e44-2bd2-4180-beda-ae138d511023",
-   "metadata": {},
-   "source": [
-    "# Agregando y eliminando kernels de jupyter\n",
-    "\n",
-    "#### List all kernels and grap the name of the kernel you want to remove\n",
-    "```\n",
-    "jupyter kernelspec list\n",
-    "```\n",
-    "\n",
-    "#### Add kernel\n",
-    "```\n",
-    "conda activate ejemploenv\n",
-    "pip install ipykernel\n",
-    "python -m ipykernel install --user --name ejemploenv --display-name \"Mi env de ejemplo\"\n",
-    "```\n",
-    "\n",
-    "#### Remove it\n",
-    "```\n",
-    "jupyter kernelspec remove ejemploenv\n",
-    "```"
+    "# Utils"
    ]
   },
   {
@@ -279,6 +217,7 @@
    "source": [
     "# Automatic Data Preprocessing\n",
     "\n",
+    "- https://dataprep.ai/\n",
     "- https://github.com/AutoViML/pandas_dq\n",
     "- https://pycaret.gitbook.io/docs/get-started/preprocessing"
    ]
