--- a/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb
+++ b/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb
@@ -1017,7 +1017,7 @@
     "df_ventas = pd.DataFrame({'periodo' : ['2020', '2021', '2022', '2023'], \n",
     "                        'ventas' : [1_001_934, 2_461_732, 5_431_236, 10_844_655]})\n",
     "df_ventas['ventas_millones'] = df_ventas['ventas'] // 1000000\n",
-    "df_ventas['crecimiento'] = round((np.cumsum(df_ventas['ventas'])/ventas['ventas']-1)*100,1)\n",
+    "df_ventas['crecimiento'] = round((np.cumsum(df_ventas['ventas'])/df_ventas['ventas']-1)*100,1)\n",
     "df_ventas"
    ]
   },
@@ -1107,7 +1107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
