--- a/cursos/espanol/datascience/0__graficos.ipynb
+++ b/cursos/espanol/datascience/0__graficos.ipynb
@@ -25,23 +25,15 @@
    "id": "2bf60571-0a8b-408c-a303-3b87ea5e1445",
    "metadata": {},
    "source": [
-    "## Ejercicio 2: mostrar los valores faltantes de un dataframe de pandas tal como indica la figura\n",
+    "## Ejercicio 2 [opcional]: mostrar los valores faltantes de un dataframe de pandas tal como indica la figura\n",
     "\n",
-    "![Missing Values](./img/missing_values.png)\n",
+    "![Missing Values](https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/img/missing_values.png)\n",
     "\n",
     "Descargar los datos utilizando el siguiente codigo:\n",
     "```\n",
     "df = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_info.csv')\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33c73f68-ab69-4ec6-b8e7-574b9e592020",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
