--- a/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb
@@ -7,9 +7,13 @@
    "source": [
     "# Redes Convolucionales\n",
     "\n",
-    "[The little book of Deep Learning](https://fleuret.org/public/lbdl.pdf)\n",
+    "[Visualizacion](https://adamharley.com/nn_vis/)\n",
     "\n",
-    "[Visualizacion](https://adamharley.com/nn_vis/)\n"
+    "[Visualizacion con explicacion](https://poloclub.github.io/cnn-explainer/)\n",
+    "\n",
+    "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
+    "\n",
+    "[The little book of Deep Learning by Francois Fleuret](https://fleuret.org/public/lbdl.pdf)"
    ]
   },
   {
@@ -37,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
