--- a/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb
@@ -882,7 +882,8 @@
     "- [Diffusers](https://huggingface.co/docs/diffusers/quicktour)\n",
     "- [Understanding pipelines, models and schedulers](https://huggingface.co/docs/diffusers/using-diffusers/write_own_pipeline)\n",
     "- [How does Stable Diffusion work?](https://huggingface.co/blog/stable_diffusion#how-does-stable-diffusion-work)\n",
-    "- [Stable Diffusion from scratch](https://github.com/Animadversio/DiffusionFromScratch )"
+    "- [Stable Diffusion from scratch](https://github.com/Animadversio/DiffusionFromScratch )\n",
+    "- [Andrew Chan Notes on Diffusion](https://andrewkchan.dev/posts/diffusion.html)"
    ]
   }
  ],
@@ -907,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
