--- a/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
@@ -9,15 +9,29 @@
     "\n",
     "[Visualization](https://bbycroft.net/llm)\n",
     "\n",
-    "[Self Attention Layer Explanation](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
+    "[Self Attention Layer Explanation by Sebastian Raschka](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
     "\n",
-    "[Implement a transformer from scratch with pytorch](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
+    "[Implement a transformer from scratch with pytorch by Andrej Karpathy (OpenAI, Stanford)](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
     "\n",
-    "[Implement a transformer from scratch with keras](https://keras.io/guides/keras_nlp/transformer_pretraining/)\n",
+    "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
     "\n",
-    "[Deep NN course](https://fleuret.org/dlc/)\n",
+    "[Step by step without math by Miguel Grinberg](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)\n",
     "\n",
-    "[Step by step without math](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)"
+    "------------------------------\n",
+    "\n",
+    "[CS224N: Natural Language Processing with Deep Learning\n",
+    "Stanford / Spring 2024](https://web.stanford.edu/class/cs224n/)\n",
+    "\n",
+    "[Stanford CS224N: Natural Language Processing with Deep Learning | 2023](https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4)\n",
+    "\n",
+    "[Stanford CS224N NLP with Deep Learning | 2023](https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW)\n",
+    "\n",
+    "------------------------------\n",
+    "\n",
+    "[Mapping the Mind of a Large Language Model by Anthropic](https://www.anthropic.com/news/mapping-mind-language-model)\n",
+    "\n",
+    "[Extracting Concepts from GPT-4\n",
+    "](https://openai.com/index/extracting-concepts-from-gpt-4/)"
    ]
   },
   {
