--- a/cursos/espanol/deeplearning/6_gradio.ipynb
+++ b/cursos/espanol/deeplearning/6_gradio.ipynb
@@ -172,7 +172,6 @@
     "\n",
     "def update(year):\n",
     "    df = get_data()\n",
-    "    print(year)\n",
     "    ventas = df[df.Fecha == int(year)].Ventas.values[0]\n",
     "    return f\"Las ventas para {year} fueron: {ventas}\""
    ]
@@ -234,9 +233,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1569eb1-a179-488b-9dfc-20d69f01b990",
+   "metadata": {},
+   "source": [
+    "# Como hacer que nuestra app funcione permanentemente con HuggingFace Spaces\n",
+    "\n",
+    "Crear nuestro gradio Space en:\n",
+    "https://huggingface.co/spaces\n",
+    "\n",
+    "Pegar el codigo de nuestra app en un archivo app.py:\n",
+    "```python\n",
+    "# importamos gradio\n",
+    "import gradio as gr\n",
+    "\n",
+    "# funcion para procesamiento de los datos\n",
+    "def saludo(nombre, intensidad):\n",
+    "    return \"Hola, \" + nombre + \"!\" * int(intensidad)\n",
+    "\n",
+    "# interfaz\n",
+    "demo = gr.Interface(\n",
+    "    fn=saludo,\n",
+    "    inputs=[\"text\", \"slider\"],\n",
+    "    outputs=[\"text\"],\n",
+    "    allow_flagging='never'\n",
+    ")\n",
+    "\n",
+    "# inicio de la app\n",
+    "demo.launch()\n",
+    "```\n",
+    "El codigo debe contener cuatro partes esenciales:\n",
+    "- El import de gradio\n",
+    "- La funcion con nuestro procesamiento que convierte los datos de entrada en una salida\n",
+    "- La interfaz que queremos mostrar al usuario final\n",
+    "- inicio de la app\n",
+    "\n",
+    "Una vez que hagamos commit nuestra app estara disponible en:\n",
+    "https://nombredeusuario-nombredelspace.hf.space/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d67db2a7-4409-4360-bfb4-d739ca986434",
+   "id": "8c513f3e-8889-4417-87e5-25cc05b92517",
    "metadata": {},
    "outputs": [],
    "source": []
