--- a/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb
+++ b/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb
@@ -52,7 +52,7 @@
     "#- Predecir la palabra que falta en un texto de examen de ingles (CLASIFICACION)\n",
     "#- Predecir sobre que tema habla un texto (CLASIFICACION)\n",
     "#- Predecir si una compra con tarjeta de credito es fraude (CLASIFICACION)\n",
-    "#- Predecir la edad de una persona mediante una fotografia (CLASIFICACION)\n",
+    "#- Predecir la edad de una persona mediante una fotografia (REGRESION)\n",
     "#- Predecir si el semaforo esta rojo o verde (CLASIFICACION)\n",
     "#- Predecir si a alguien le va a gustar un producto o no (CLASIFICACION)"
    ]
@@ -104,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
