--- a/cursos/espanol/datascience/E1_knn.ipynb
+++ b/cursos/espanol/datascience/E1_knn.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"tabla_telefonos2.csv\")\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos2.csv\")\n",
     "X_entrenamiento = df.drop(\"Precio\", axis=1)"
    ]
   },
@@ -177,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
