--- a/cursos/espanol/datascience/E1_knn.ipynb
+++ b/cursos/espanol/datascience/E1_knn.ipynb
@@ -101,7 +101,8 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos2.csv\")\n",
-    "X_entrenamiento = df.drop(\"Precio\", axis=1)"
+    "X_entrenamiento = df.drop(\"Precio\", axis=1)\n",
+    "X_entrenamiento"
    ]
   },
   {
