--- a/cursos/espanol/datascience/E1_knn.ipynb
+++ b/cursos/espanol/datascience/E1_knn.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1e3889a5-3527-4726-ab28-255b0dc74e4e",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dc6baacb-e46d-4be1-b1b6-09be10eece1a",
    "metadata": {},
    "outputs": [],
@@ -94,10 +94,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f6ef539f-979d-4463-be1d-15ba3509593c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bateria</th>\n",
+       "      <th>Memoria_64</th>\n",
+       "      <th>Memoria_256</th>\n",
+       "      <th>Memoria_512</th>\n",
+       "      <th>Color_Gris</th>\n",
+       "      <th>Color_Oro</th>\n",
+       "      <th>Color_Verde</th>\n",
+       "      <th>Estado_Bueno</th>\n",
+       "      <th>Estado_Muy bueno</th>\n",
+       "      <th>Estado_Reacondicionado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Bateria  Memoria_64  Memoria_256  Memoria_512  Color_Gris  Color_Oro  \\\n",
+       "0     0.84           0            1            0           1          0   \n",
+       "1     0.70           0            1            0           1          0   \n",
+       "2     0.79           1            0            0           1          0   \n",
+       "3     0.86           0            0            1           0          1   \n",
+       "4     1.00           0            1            0           1          0   \n",
+       "5     0.74           0            1            0           0          0   \n",
+       "6     0.82           0            1            0           1          0   \n",
+       "7     0.78           0            1            0           1          0   \n",
+       "\n",
+       "   Color_Verde  Estado_Bueno  Estado_Muy bueno  Estado_Reacondicionado  \n",
+       "0            0             0                 0                       1  \n",
+       "1            0             1                 0                       0  \n",
+       "2            0             0                 0                       1  \n",
+       "3            0             0                 0                       1  \n",
+       "4            0             1                 0                       0  \n",
+       "5            1             1                 0                       0  \n",
+       "6            0             0                 1                       0  \n",
+       "7            0             1                 0                       0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos2.csv\")\n",
@@ -107,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "35bab87f-acac-47d0-97bf-44049a3fe7e6",
    "metadata": {},
    "outputs": [],
@@ -136,10 +305,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c376143b-4b23-4d19-9b7b-62b829436332",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparando nuevo dato con fila: 0\n",
+      "[0.84 0.   1.   0.   1.   0.   0.   0.   0.   1.  ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 1.4145317246354001\n",
+      "Comparando nuevo dato con fila: 1\n",
+      "[0.7 0.  1.  0.  1.  0.  0.  1.  0.  0. ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 1.4184851074297538\n",
+      "Comparando nuevo dato con fila: 2\n",
+      "[0.79 1.   0.   0.   1.   0.   0.   0.   0.   1.  ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 2.000099997500125\n",
+      "Comparando nuevo dato con fila: 3\n",
+      "[0.86 0.   0.   1.   0.   1.   0.   0.   0.   1.  ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 2.4499999999999997\n",
+      "Comparando nuevo dato con fila: 4\n",
+      "[1. 0. 1. 0. 1. 0. 0. 1. 0. 0.]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 1.426919759481941\n",
+      "Comparando nuevo dato con fila: 5\n",
+      "[0.74 0.   1.   0.   0.   0.   1.   1.   0.   0.  ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 2.0012246250733576\n",
+      "Comparando nuevo dato con fila: 6\n",
+      "[0.82 0.   1.   0.   1.   0.   0.   0.   1.   0.  ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 1.4142489172702235\n",
+      "Comparando nuevo dato con fila: 7\n",
+      "[0.78 0.   1.   0.   1.   0.   0.   1.   0.   0.  ]\n",
+      "[0.81 0.   1.   0.   1.   0.   0.   1.   1.   1.  ]\n",
+      "Distancia: 1.4145317246354001\n",
+      "El vecino mas cercano es el de la fila: 6\n"
+     ]
+    }
+   ],
    "source": [
     "mejor_vecino = vecinos_cercanos(X_entrenamiento, mi_telefono.iloc[0,:])\n",
     "print('El vecino mas cercano es el de la fila:', mejor_vecino)"
