--- a/cursos/espanol/datascience/0__datasets.ipynb
+++ b/cursos/espanol/datascience/0__datasets.ipynb
@@ -30,7 +30,8 @@
     "Datasets tabulares:\n",
     "- https://huggingface.co/datasets?task_categories=task_categories:tabular-classification&sort=downloads\n",
     "\n",
-    "Como cargarlos: https://huggingface.co/docs/datasets/tabular_load"
+    "- Como cargarlos: https://huggingface.co/docs/datasets/tabular_load\n",
+    "- Como analizarlos con [SQL usando DuckDB](https://duckdb.org/2024/05/29/access-150k-plus-datasets-from-hugging-face-with-duckdb.html)"
    ]
   },
   {
@@ -40,18 +41,34 @@
    "source": [
     "## Mas Datasets\n",
     "\n",
-    "- https://epistasislab.github.io/pmlb/\n",
-    "- https://paperswithcode.com/datasets\n",
-    "- https://cds.climate.copernicus.eu/#!/search\n",
-    "- https://ourworldindata.org/\n",
+    "- Awesome Public Datasets: https://github.com/awesomedata/awesome-public-datasets\n",
+    "- UCI Machine Learning Repository: https://archive.ics.uci.edu/\n",
+    "- OpenML Datasets: https://www.openml.org/\n",
+    "- Papers With Code: https://paperswithcode.com/datasets\n",
+    "- Climate: https://cds.climate.copernicus.eu/#!/search\n",
+    "- Our World in Data: https://ourworldindata.org/\n",
+    "- Penn Machine Learning Benchmarks: https://epistasislab.github.io/pmlb/\n",
     "\n",
     "## Datasets España\n",
-    "- https://datos.gob.es/es/catalogo\n",
-    "- https://datos.gob.es/es/catalogo/a07002862-registro-de-emergencias-del-112\n",
+    "- Gobierno de España: https://datos.gob.es/es/catalogo\n",
     "\n",
-    "## Buscador de datasets\n",
+    "## Buscadores de datasets\n",
     "\n",
-    "- https://www.sci2sci.com/"
+    "- Google Dataset Search: https://datasetsearch.research.google.com/\n",
+    "- Sci2: https://www.sci2sci.com/open_data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7586d85a-2cd1-4b41-a442-7939e4abfff4",
+   "metadata": {},
+   "source": [
+    "# Competencias de Machine Learning\n",
+    "\n",
+    "  - Kaggle: https://www.kaggle.com/competitions\n",
+    "  - DrivenData: https://www.drivendata.org\n",
+    "  - Zindi Africa: https://zindi.africa/competitions\n",
+    "  - Guia sobre como competir ([PDF](https://github.com/SamBelkacem/Machine-Learning-Basics/blob/main/Machine%20learning%20competitions.pdf))"
    ]
   },
   {
