--- a/cursos/espanol/datascience/A1.0_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1.0_graficos_seaborn.ipynb
@@ -607,7 +607,9 @@
     "- Q2 o mediana (el 50% de los datos)\n",
     "- Q3 (75% de los datos)\n",
     "- Rango intercuartílico (RIC): Q3–Q1\n",
-    "- Valores atipicos o outliers: son valores inferiores a Q1–1.5·RIC o superiores a Q3+1.5·RIC\n"
+    "- Valores atipicos o outliers: son valores inferiores a Q1–1.5·RIC o superiores a Q3+1.5·RIC\n",
+    "\n",
+    "**Nota:** El grafico de cajas a veces puede ser confuso: [leer articulo](https://nightingaledvs.com/ive-stopped-using-box-plots-should-you/)"
    ]
   },
   {
