--- a/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "[Visualizacion con explicacion](https://poloclub.github.io/cnn-explainer/)\n",
     "\n",
+    "[NYU Deep Learning SP20](https://www.youtube.com/playlist?list=PLLHTzKZzVU9eaEyErdV26ikyolxOsz6mq)\n",
+    "\n",
     "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
     "\n",
     "[The little book of Deep Learning by Francois Fleuret](https://fleuret.org/public/lbdl.pdf)"
