--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -25,14 +25,14 @@
     "\n",
     "En esta unidad veremos las siguientes herramientas que disponemos con python para analizar datos:\n",
     "\n",
-    "Limpieza y manipulacion de datos: \n",
+    "#### Limpieza y manipulacion de datos: \n",
     "  - [Pandas](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.2_jugando_con_pandas.ipynb)\n",
     "  - [Numpy](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.1_jugando_con_numpy.ipynb)\n",
     "  - Librerias para automatizar este proceso (muy utiles si no sabes por donde empezar):\n",
     "      - [pandas_dq](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.3_pandas_dq.ipynb)\n",
     "      - [cleanlab](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.3_cleanlab.ipynb)\n",
     "\n",
-    "Graficos y Analisis Exploratorio de datos:\n",
+    "#### Graficos y Analisis Exploratorio de datos:\n",
     "  - [Seaborn](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.0_graficos_seaborn.ipynb)\n",
     "  - [Matplotlib](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb)\n",
     "  - Librerias para automatizar este proceso (muy utiles si no sabes por donde empezar):\n",
@@ -40,25 +40,9 @@
     "    - [ydata](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.2_eda_ydata.ipynb) \n",
     "    - [AutoViz](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.2_eda_autoviz.ipynb)\n",
     "    - [DataPrep](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.2_eda_dataprep.ipynb)\n",
-    "    \n",
-    "\n",
-    "- Otras librerias que puedes investigar:\n",
-    "    - Graficos interactivos:\n",
-    "        - [Plotly](https://plotly.com/python/)\n",
-    "        - [Bokeh](https://bokeh.org/)\n",
-    "        - [Altair](https://altair-viz.github.io/)\n",
-    "        - [ggplot](https://ggplot2.tidyverse.org/)\n",
-    "    - Mas EDA:\n",
-    "    - [D-Tale](https://github.com/man-group/dtale)\n",
-    "    - [dabl](https://amueller.github.io/dabl/dev/quick_start.html)\n",
-    "    - [QuickDA](https://github.com/sid-the-coder/QuickDA)\n",
-    "    - [Datatile](https://github.com/polyaxon/traceml)\n",
-    "    - [Lux](https://github.com/lux-org/lux)\n",
-    "    - [ExploriPy](https://github.com/exploripy/exploripy)\n",
-    "    - [pyjanitor](https://pyjanitor-devs.github.io/pyjanitor/)\n",
     "\n",
     "  \n",
-    "Tests de distribuciones de probabilidad:\n",
+    "#### Tests de distribuciones de probabilidad:\n",
     "  - [Fitter](https://github.com/cokelaer/fitter)"
    ]
   },
@@ -67,7 +51,20 @@
    "id": "4a3438e6-fe10-453c-9067-01742c7febc9",
    "metadata": {},
    "source": [
-    "Otras librerias interesantes que iremos incluyendo en el curso mas adelante:\n",
+    "#### Otras librerias que puedes investigar:\n",
+    "- Graficos interactivos:\n",
+    "    - [Plotly](https://plotly.com/python/)\n",
+    "    - [Bokeh](https://bokeh.org/)\n",
+    "    - [Altair](https://altair-viz.github.io/)\n",
+    "    - [ggplot](https://ggplot2.tidyverse.org/)\n",
+    "- Mas EDA y limpieza de datos:\n",
+    "    - [D-Tale](https://github.com/man-group/dtale)\n",
+    "    - [dabl](https://amueller.github.io/dabl/dev/quick_start.html)\n",
+    "    - [QuickDA](https://github.com/sid-the-coder/QuickDA)\n",
+    "    - [Datatile](https://github.com/polyaxon/traceml)\n",
+    "    - [Lux](https://github.com/lux-org/lux)\n",
+    "    - [ExploriPy](https://github.com/exploripy/exploripy)\n",
+    "    - [pyjanitor](https://pyjanitor-devs.github.io/pyjanitor/)\n",
     "- [Graficos dentro de un dataframe de pandas](https://colab.research.google.com/github/mattharrison/effective_pandas_book/blob/main/34-styling-code.ipynb) con [sparklines](https://dash.plotly.com/dash-ag-grid/enterprise-sparklines)"
    ]
   },
